// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchView displays search results 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="searchBar"
    >
      <div
        class="wrapper input"
      >
        <span
          class="prefix"
        >
          <i
            class="material-icons icon"
          >
            search
          </i>
        </span>
        <input
          class="input"
          id="input-text-5"
          name="input-text-5"
          placeholder="Search by content, articles and categories"
          type="text"
          value="some input"
        />
        <span
          class="suffix"
        >
          <i
            class="material-icons icon clearButton"
          >
            close
          </i>
        </span>
      </div>
    </div>
  </div>
  <table
    class="table"
  >
    <thead
      class="header-tr"
    >
      <tr
        class="headerRow"
      >
        <td
          class="wrapper normal"
          style="width: 25px;"
        />
        <td
          class="wrapper normal"
        />
        <td
          class="wrapper normal"
        />
        <td
          class="wrapper normal"
          style="width: 124px;"
        />
        <td
          class="wrapper normal"
          style="width: 160px;"
        />
      </tr>
    </thead>
    <tbody
      class="tableBody table-body"
    >
      <tr
        class="row row"
      >
        <td
          class="wrapper cell normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper cell nesting-level-0 normal"
        >
          <div
            class="cellContent"
          >
            <span
              class="caret-placeholder"
            />
            <span
              class="category-title"
            >
              Cat 1 
              <span
                class="search-highlight"
              >
                mod
              </span>
            </span>
          </div>
        </td>
        <td
          class="wrapper cell normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
          style="min-width: 110px; width: 110px;"
        >
          <div
            class="cellContent"
          >
            <div
              class="container"
            >
              <i
                class="icon material-icons"
              >
                visibility
              </i>
              <div
                class="title"
              >
                Public
              </div>
            </div>
          </div>
        </td>
        <td
          class="wrapper normal"
          style="width: 105px; min-width: 105px;"
        >
          <div
            class="cellContent"
          >
            <div
              class="language-bullet-list"
            >
              <div
                class="language-bullet-item"
                data-testid="locale-bullet-en-US"
              >
                <img
                  alt="en-US"
                  class="flag-emoji"
                  data-testid="flag-en-US"
                  src="test-file-stub"
                />
              </div>
            </div>
          </div>
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent actions"
          >
            <div
              class="action-list"
            >
              <button
                class="action material-icons"
                data-testid="categorySettings"
                id="categorySettings-28"
              >
                settings
              </button>
              <button
                class="action material-icons"
                data-testid="createNestedCategory"
                id="createNestedCategory-28"
              >
                playlist_add
              </button>
              <button
                class="action material-icons"
                data-testid="createNestedArticle"
                id="createNestedArticle-28"
              >
                note_add
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`SearchView shows only search bar if search input is empty 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="searchBar"
    >
      <div
        class="wrapper input"
      >
        <span
          class="prefix"
        >
          <i
            class="material-icons icon"
          >
            search
          </i>
        </span>
        <input
          class="input"
          id="input-text-1"
          name="input-text-1"
          placeholder="Search by content, articles and categories"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchView shows only search bar if search is in erroneous state 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="searchBar"
    >
      <div
        class="wrapper input"
      >
        <span
          class="prefix"
        >
          <i
            class="material-icons icon"
          >
            search
          </i>
        </span>
        <input
          class="input"
          id="input-text-2"
          name="input-text-2"
          placeholder="Search by content, articles and categories"
          type="text"
          value="some input"
        />
        <span
          class="suffix"
        >
          <i
            class="material-icons icon clearButton"
          >
            close
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchView shows search bar and loader if search is ongoing 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="searchBar"
    >
      <div
        class="wrapper input"
      >
        <span
          class="prefix"
        >
          <i
            class="material-icons icon"
          >
            search
          </i>
        </span>
        <input
          class="input"
          id="input-text-3"
          name="input-text-3"
          placeholder="Search by content, articles and categories"
          type="text"
          value="some input"
        />
        <span
          class="suffix"
        >
          <i
            class="material-icons icon clearButton"
          >
            close
          </i>
        </span>
      </div>
    </div>
  </div>
  <table
    class="table"
  >
    <thead
      class=""
    >
      <tr
        class="headerRow"
      >
        <td
          class="wrapper headerCell normal"
        />
        <td
          class="wrapper headerCell normal"
        />
        <td
          class="wrapper headerCell normal"
          style="width: 124px;"
        />
        <td
          class="wrapper headerCell normal"
          style="width: 160px;"
        />
      </tr>
    </thead>
    <tbody
      class="tableBody main-table"
    >
      <tr
        class="row row"
      >
        <td
          class="wrapper nesting-level-1 normal"
        >
          <div
            class="cellContent"
          >
            <div
              class="loading-content"
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
      </tr>
      <tr
        class="row row"
      >
        <td
          class="wrapper nesting-level-1 normal"
        >
          <div
            class="cellContent"
          >
            <div
              class="loading-content"
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
      </tr>
      <tr
        class="row row"
      >
        <td
          class="wrapper nesting-level-1 normal"
        >
          <div
            class="cellContent"
          >
            <div
              class="loading-content"
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
      </tr>
      <tr
        class="row row"
      >
        <td
          class="wrapper nesting-level-1 normal"
        >
          <div
            class="cellContent"
          >
            <div
              class="loading-content"
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
      </tr>
      <tr
        class="row row"
      >
        <td
          class="wrapper nesting-level-1 normal"
        >
          <div
            class="cellContent"
          >
            <div
              class="loading-content"
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
        <td
          class="wrapper normal"
        >
          <div
            class="cellContent"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`SearchView shows the no result message if there are 0 results for a given search 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="searchBar"
    >
      <div
        class="wrapper input"
      >
        <span
          class="prefix"
        >
          <i
            class="material-icons icon"
          >
            search
          </i>
        </span>
        <input
          class="input"
          id="input-text-4"
          name="input-text-4"
          placeholder="Search by content, articles and categories"
          type="text"
          value="some input"
        />
        <span
          class="suffix"
        >
          <i
            class="material-icons icon clearButton"
          >
            close
          </i>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="wrapper"
  >
    <div
      class="circle"
    >
      <i
        class="material-icons icon"
      >
        article
      </i>
    </div>
    <p
      class="text"
    >
      No results matching ”
      some input
      ”
    </p>
  </div>
</div>
`;
